resolved weird alignment of comments in container

--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -1,6 +1,4 @@
 .comments {
-    display: flex;
     text-align: left;
-    align-items: flex-start;
-    justify-content: flex-start;
+
 }
